<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">BeeShare</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Signin</string>
    <string name="login" translatable="false">Login</string>
    <string name="signup" translatable="false">Signup</string>
    <string name="prompt_username" translatable="false">Username</string>
    <string name="ok" translatable="false"> OK </string>
    <string name="invitation_deep_link" translatable="false">http://www.madmax.com/beeshare</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="home" translatable="false">Home</string>
    <string name="logout_selected" translatable="false">Logout</string>
    <string name="BOOT" translatable="false">BOOT</string>

    <string name="title_activity_group_expenses">Group expenses</string>
    <string name="title_image_expenses">Image expenses</string>
    <string name="title_activity_group_expenses_add">Add expense to group</string>
    <string name="groups">GROUPS</string>
    <string name="friends">FRIENDS</string>
    <string name="pending">PENDING</string>
    <string name="paydebt">PAY DEBT</string>
    <string name="expense_detail">EXPENSE DETAIL</string>
    <string name="comments">COMMENTS</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="purpose">Purpose</string>
    <string name="description">Description</string>
    <string name="photo">Photo</string>
    <string name="save">Save</string>
    <string name="owes_you">OWES YOU</string>
    <string name="you_should_receive">YOU SHOULD RECEIVE</string>
    <string name="no_debts">NO DEBTS</string>
    <string name="credit_of">CREDIT OF</string>
    <string name="owes_to_the_group">OWES TO GROUP</string>
    <string name="should_receive_from_the_group">SHOULD RECEIVE FROM GROUP</string>
    <string name="debt_of">DEBT OF</string>
    <string name="expense_amount">TOTAL AMOUNT</string>
    <string name="edit_description_hint">Expense description</string>
    <string name="edit_amount_hint">Amount</string>
    <string name="expense_saved">Expense saved</string>
    <string name="prompt_create_account">No account yet? Create one</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_registered_user">Already a member? Login</string>
    <string name="auth_failed">Authentication failed.\nPlease insert a valid email/password</string>
    <string name="required">This field is required</string>
    <string name="notnull">Field cannot be null</string>
    <string name="emailVerification_text">A verification email has been sent to you.\n\nPlease, click on the link in the email to confirm your registration.</string>
    <string name="shared_groups">Shared Groups</string>
    <string name="verify_email">Verify email</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="positive_balance">To receive</string>
    <string name="negative_balance">You own</string>
    <string name="activities">Activities</string>
    <string name="members">Members</string>
    <string name="weak_password">At least 6 characters!</string>
    <string name="invitation_message">Join BeeShare!</string>
    <string name="invitationToGroup_message">A friend want to share expenses with you</string>
    <string name="invitation_title">Invite on BeeShare!</string>
    <string name="invitation_cta">Install BeeShare!</string>
    <string name="invitationToGroup">Join the group!</string>
    <string name="title_activity_group_info">Group Detail</string>
    <string name="title_activity_new_member">New Member</string>
    <string name="invite_member">Invite a friend</string>
    <string name="settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="GROUP_ADD"> create new group </string>
    <!--string name="GROUP_REMOVE"> remove group </string-->
    <string name="GROUP_EDIT"> edit group </string>
    <string name="GROUP_MEMBER_ADD"> add new member </string>
    <string name="GROUP_MEMBER_REMOVE"> remove member </string>
    <string name="EXPENSE_ADD"> add expense </string>
    <string name="EXPENSE_REMOVE"> remove expense </string>
    <string name="EXPENSE_EDIT"> edit expense </string>
    <string name="PENDING_EXPENSE_ADD"> propose new expense </string>
    <string name="PENDING_EXPENSE_REMOVE"> remove proposed expense </string>
    <string name="PENDING_EXPENSE_EDIT"> edit proposed expense </string>
    <string name="PENDING_EXPENSE_VOTE"> vote proposed expense </string>
    <string name="PENDING_EXPENSE">Proposed expense </string>
    <string name="PENDING_EXPENSE_APPROVED"> has been approved!</string>
    <string name="PENDING_EXPENSE_NEGLECTED"> has been neglected!</string>
    <!--string name="FRIEND_INVITE"> New friend invited by </string-->
    <string name="FRIEND_GROUP_INVITE"> New member invited by </string>
    <string name="FRIEND_PAY"> give you back </string>
    <string name="ME_PAY">You have paid </string>
    <string name="FRIEND_COMMENT_ADD"> commented on </string>
    <string name="ME_COMMENT_ADD">You left a comment on </string>
    <string name="to"> to </string>
    <string name="did"> did </string>
    <string name="day"> The </string>
    <string name="at"> at </string>
    <string name="datetime"> Date and time </string>
    <string name="cancel"> Cancel </string>
    <string name="saved"> Saved </string>
    <string name="prompt_comment"> Add comment </string>
    <string name="dialog_verification_message">The email address associated with this account has not been confirmed yet.\nDo you need the verification email again?</string>
    <string name="dialog_verification_title">Email not confirmed</string>
    <string name="send_again">Send again</string>
    <string name="you_owe">"YOU OWE"</string>
    <string name="propose_expense">In which group do you want to\npropose a new expense?</string>
    <string name="edit_group">Edit group</string>
    <string name="remove_group">Delete group</string>
    <string name="edit_expense">Edit expense</string>
    <string name="remove_expense">Delete expense</string>
    <string name="product_image">PRODUCT IMAGE</string>
    <string name="product_bill">PRODUCT BILL</string>
    <string name="move_to_expenses">"MOVE TO EXPENSES"</string>
    <string name="expense">Expense</string>
    <string name="group">Group</string>
    <string name="notifications">Notifications</string>
    <string name="other">Other</string>
    <string name="setting_notification_join_group">Invitation to join a new group</string>
    <string name="setting_notification_new_expense">New expense added</string>
    <string name="setting_notification_removed_expense">Expense removed</string>
    <string name="setting_notification_new_proposed_expense">New proposal expense added</string>
    <string name="setting_notification_comment">Comment on your proposal expenses</string>
    <string name="setting_notification_vote_proposed_expense">Vote on your proposal expenses</string>
    <string name="setting_notification_approved_proposed_expense">Proposal expense approved</string>
    <string name="setting_notification_neglected_proposed_expense">Proposal expense neglected</string>
    <string name="setting_notification_user_pay">User pay his debts with you</string>
    <!--string name="setting_notification_user_confirm_payment">User confirm your payment</string-->
    <string name="setting_default_currency">Select default currency</string>
    <string name="no_debts_to_pay">No debts to pay</string>
    <string name="no_debts_to_pay_for_expense">No debts for this expense</string>
    <string name="friend_removed">Friend removed</string>
    <string name="credit_group">Still credits with this group.\nAre you sure?</string>
    <string name="debit_group">Still debits with this group.\nBalance it to leave.</string>
    <string name="leaving">No debts, leaving group...</string>
    <string name="balance_not_available">Group balance not available.\nTry again later.</string>
    <string name="not_creator">You\'re not the creatore of the proposal!</string>
    <string name="new_friend">New friend added!</string>
    <string name="already_friends">Already friends!</string>
    <string name="join_group">You join a new group!</string>
    <string name="already_in_group">Already joined group </string>
    <string name="invalid_form">Invalid form!</string>
    <string name="cannot_pay_more">Cannot pay more than your debit!</string>
    <string name="cannot_pay_more_currency">Cannot pay more than your debit in this currency!</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="paid">Debt paid</string>
    <string name="only_creator">Only who propose the expense can approve it!</string>
    <string name="clicked">You clicked on </string>
    <string name="no_debts_currency">No debts in this currency</string>
    <string name="no_payment">No payment done</string>
    <string name="error">An error occurred!</string>
    <string name="error_user_db">Error while getting current user informations!</string>
    <string name="member_add">Friend added to group</string>
    <string name="error_password">Error updating password!</string>
    <string name="expense_removed">Expense successfully removed</string>
    <string name="group_removed">Group successfully removed</string>
    <string name="error_not_admin">You must be admin of the ge group to remove it!</string>
    <string name="split_by_exact">Split by exact import</string>
    <string name="split_by_percentage">Split by percentage</string>
    <string name="split_desire">Do you desire to split this expense in a specific way?</string>
    <string name="cannot_leave_group">You have a debit. Break even before leaving</string>
    <string name="leaving_group">Leaving group...</string>
    <string name="prompt_currency">Choose your currency</string>
    <string name="no_data_available">No data available</string>
    <string name="no_friends">No friends yet</string>
    <string name="pay">PAY</string>
    <string name="me">Me</string>
</resources>
