<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <LinearLayout android:id="@+id/edit_group"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView android:id="@+id/group_image"
            android:src="@drawable/group_default"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"
            android:clickable="true"
            android:contentDescription="@string/photo"/>

        <!-- Group name label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <!-- Description Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/group_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textLongMessage" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccent"
            android:text="@string/save"/>

    </LinearLayout>

</ScrollView>