<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <LinearLayout android:id="@+id/edit_expense"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp">

            <EditText
                android:id="@+id/expense_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="0dp"
                android:hint="@string/edit_description_hint"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText android:id="@+id/expense_amount"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"

                    android:layout_alignParentStart="true"

                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:hint="@string/edit_amount_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="20sp"/>

                <Spinner android:id="@+id/expense_currency"
                    android:layout_width="75dp"
                    android:layout_height="64dp"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1" />

            </RelativeLayout>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/product_image"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

        <ImageView android:id="@+id/expense_image"
            android:src="@drawable/add_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"
            android:clickable="true"
            android:contentDescription="@string/photo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/product_bill"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

        <ImageView android:id="@+id/expense_bill"
            android:src="@drawable/add_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"
            android:clickable="true"
            android:contentDescription="@string/photo"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccent"
            android:text="@string/save"/>

    </LinearLayout>

</ScrollView>