<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/author_photo"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/anonymous"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"

        android:paddingTop="5dp"
        android:paddingLeft="8dp">

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:maxLines="1"
            android:layout_marginBottom="4dp"

            android:clickable="false"

            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryText"
            />

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="4dp"

            android:clickable="false"

            android:textSize="18sp"
            android:text="@string/comments"
            android:textColor="@color/colorPrimaryText"
            />

        <TextView
            android:id="@+id/comment_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:clickable="false"

            android:textSize="12sp"
            android:textStyle="italic"
            android:text="@string/datetime"
            android:textColor="@color/colorPrimaryText"
            />

    </LinearLayout>
</LinearLayout>